<resources>
    <string name="app_name">软件1402  14025207  贺英俊</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="btn_login_text">登录</string>
    <string name="edit_login_account_hint_text">邮箱/手机号</string>
    <string name="edit_login_password_hint_text">请输入密码</string>
    <string name="register_text">注册</string>
    <string name="forgot_psw_text">忘记密码</string>
    <string name="simple_adapter_activity_title">SimpleAdapter</string>
    <string name="title_activity_simple_adatper">SimpleAdapter</string>
    <string name="tv_dunk_boy_name">樱木花道</string>
    <string name="tv_dunk_boy_des">头碰篮板的男人</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_tab">TabActivity</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="title_activity_new_tab">NewTabActivity</string>
    <string name="title_activity_view_pager">ViewPagerActivity</string>

    <string name="dummy_section_text">Section %1d is just a dummy section.</string>

    <string name="demo_external_activity">Demo External Activity</string>

    <string name="one">ONE</string>
    <string name="eight">EIGHT</string>
    <string name="five">FIVE</string>
    <string name="four">FOUR</string>
    <string name="nine">NINE</string>
    <string name="seven">SEVEN</string>
    <string name="six">SIX</string>
    <string name="ten">TEN</string>
    <string name="three">THREE</string>
    <string name="two">TWO</string>
    <string name="title_activity_scrollable_tabs">Scrollable Tabs</string>
    <string name="title_activity_simple_tabs">Simple Tabs</string>
    <string name="btn_simple_tabs">Simple Tabs</string>
    <string name="btn_scrollable_tabs">Scrollable Tabs</string>
    <string name="btn_icon_text_tabs">Icon &amp; Text Tabs</string>
    <string name="btn_icon_tabs">Only Icon Tabs</string>
    <string name="btn_pinned_top_tabs">Pinned To Top Tabs</string>
    <string name="title_activity_icon_text_tabs">Icon and Text Tabs</string>
    <string name="title_activity_icon_tabs">Icon Tabs</string>
    <string name="btn_custom_icon_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_custom_view_icon_text_tabs">Custom View Icon &amp; Text</string>
    <string name="title_activity_pinned_top_tabs">Pin Top Tabs</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="demo_collection">Demo Collection</string>
    <string name="font_fontFamily_medium">sans-serif</string>
    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>
    <string-array name="planets_array">
        <item>Mercury</item>
        <item>Venus</item>
        <item>Earth</item>
        <item>Mars</item>
        <item>Jupiter</item>
        <item>Saturn</item>
        <item>Uranus</item>
        <item>Neptune</item>
    </string-array>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_websearch">Web search</string>
    <string name="app_not_available">Sorry, there\'s no web browser available</string>
    <string name="title_activity_base_simple_cursor_adapter">BaseSimpleCursorAdapter</string>
    <string name="title_activity_my_servoest">MyServoest</string>
    <string name="title_activity_my_async_task">MyAsyncTaskActivity</string>
    <string name="title_activity_dianwo">DianwoActivity</string>
    <string name="title_activity_duihua">DuihuaActivity</string>
</resources>
