<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity"
    >

    <ImageView
        android:id="@+id/logo"
        android:layout_width="140dp"
        android:layout_height="100dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/wexin" />

    <LinearLayout
        android:id="@+id/ll_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_account"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/account" />

        <EditText
            android:id="@+id/et_account"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_login_account_hint_text"
            android:textSize="20sp" />

    </LinearLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@+id/ll_account">

    </View>

    <LinearLayout
        android:id="@+id/ll_psw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        android:background="@android:color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_psw"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginLeft="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/password" />

        <EditText
            android:id="@+id/et_psw"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/edit_login_password_hint_text"
            android:inputType="numberPassword"
            android:textSize="20sp" />

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@color/register_button_bg_color"
        android:text="@string/btn_login_text" />

    <TextView
        android:id="@+id/tv_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="33dp"
        android:layout_marginLeft="138dp"
        android:text="@string/register_text"
        android:textSize="16sp" />

    <View
        android:id="@+id/bottom_divider"
        android:layout_width="4dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/tv_register"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tv_register"
        android:background="@android:color/darker_gray"></View>

    <TextView
        android:id="@+id/tv_forget_psw"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_register"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/bottom_divider"
        android:text="@string/forgot_psw_text"
        android:textSize="16sp" />
    <View
        android:layout_width="4dp"
        android:layout_height="20dp"
        android:layout_alignTop="@+id/tv_forget_psw"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/tv_forget_psw"
        android:id="@+id/bottom_muji"
        android:background="@android:color/darker_gray"
        ></View>
    <TextView
        android:id="@+id/tv_jieshi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/tv_forget_psw"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@+id/bottom_muji"
        android:text="检查更新"
        android:textSize="16sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="点我"
        android:id="@+id/btn_dianwo"
        android:layout_above="@+id/bottom_divider"
        android:layout_alignRight="@+id/btn_login"
        android:layout_alignEnd="@+id/btn_login"
        android:layout_marginBottom="51dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="陛下，弼马温求见"
        android:textColor="@android:color/holo_red_dark"
        android:id="@+id/liaotian"
        android:background="@color/login_bg_color"
        android:layout_alignBaseline="@+id/btn_dianwo"
        android:layout_alignBottom="@+id/btn_dianwo"
        android:layout_alignLeft="@+id/logo"
        android:layout_alignStart="@+id/logo" />

</RelativeLayout>
